vlib/v/checker/tests/map_key_val_or_not_progagate_err.out
vlib/v/checker/tests/map_key_val_or_not_progagate_err.vv:6:7: error: f() returns `!int`, so it should have either an `or {}` block, or `!` at the end
    4 | 
    5 | a := {
    6 |     2:   f() // first value
      |          ~~~
    7 |     3:   f() // second value
    8 |     f(): 1
vlib/v/checker/tests/map_key_val_or_not_progagate_err.vv:7:7: error: f() returns `!int`, so it should have either an `or {}` block, or `!` at the end
    5 | a := {
    6 |     2:   f() // first value
    7 |     3:   f() // second value
      |          ~~~
    8 |     f(): 1
    9 | }
vlib/v/checker/tests/map_key_val_or_not_progagate_err.vv:8:2: error: f() returns `!int`, so it should have either an `or {}` block, or `!` at the end
    6 |     2:   f() // first value
    7 |     3:   f() // second value
    8 |     f(): 1
      |     ~~~
    9 | }
   10 |
