vlib/v/checker/tests/map_key_val_or_not_progagate_err.vv
fn f() !int {
	return 42
}

a := {
	2:   f() // first value
	3:   f() // second value
	f(): 1
}

println(a)
